# funa.py

./: README.md  pyproject.toml
src/funa/: logger.py  style.py
tests/: colors.py
