[project]
name = "funa"
version = "0.0.2"
authors = [
  { name="Funasitien DreamCloud", email="funasitien@dreamclouds.fr" },
]
description = "Bunch of trash made in style. Use with caution."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/Funasitien/funa.py"
Issues = "https://github.com/Funasitien/funa.py/issues"
Documentation = "https://github.com/Funasitien/funa.py/wiki"
"Source code" = "https://github.com/Funasitien/funa.py"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"