[project]
name = "funa"
version = "0.1.1"
authors = [
  { name="Funasitien DreamCloud", email="hello@funa.dev" },
]
description = "Utility functions packed into a single branded packages. So I don't copy paste the same file over and over."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/Funasitien/funa.py"
Issues = "https://github.com/Funasitien/funa.py/issues"
Documentation = "https://github.com/Funasitien/funa.py/wiki"
"Source code" = "https://github.com/Funasitien/funa.py"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"